--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Class projects</h2>
     <ol>
       <li>
-        Project 1
+        heh
       </li>
       <li>
         Project 2 (coming soon!)
