--- a/inspiration/index.html
+++ b/inspiration/index.html
@@ -1,3 +1,24 @@
+<!DOCTYPE html>
+<html> 
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>cynthia's class website</title>
+    <link rel="icon" type="image/png" href="images/icon.png"/>
+  </head>
+  <body>
+    <h1 id="top">cynthia's class website</h1>
+    <h2>Class projects</h2>
+    <ol>
+      <li>
+        <a href="inspiration/readings.html">Inspiration Spreadsheet</a>
+      </li>
+      <li>
+        Project 2 (coming soon!)
+      </li>
+      <li>
+        Project 3 (coming soon!)
+      </li>
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
