--- a/inspiration/index.html
+++ b/inspiration/index.html
@@ -33,7 +33,7 @@
 
     <!--  Javascript goes here... sorry we're using jquery -->
     <script
-      src="//code.jquery.com/jquery-3.6.0.min.js"
+      src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
       type="text/javascript"
     ></script>
     <script src="script.js" type="text/javascript"></script>
