--- a/Archived/inspiration/index.html
+++ b/Archived/inspiration/index.html
@@ -7,18 +7,6 @@
     <link rel="icon" type="image/png" href="images/icon.png"/>
   </head>
   <body>
-    <h1 id="top">cynthia's class website</h1>
-    <h2>Class projects</h2>
-    <ol>
-      <li>
-        <a href="inspiration/readings.html">Inspiration Spreadsheet</a>
-      </li>
-      <li>
-        Project 2 (coming soon!)
-      </li>
-      <li>
-        Project 3 (coming soon!)
-      </li>
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -34,8 +22,7 @@
     <!--  Javascript goes here... sorry we're using jquery -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js" type="text/javascript"></script>
-      type="text/javascript"
-    ></script>
+    </script>
     <script src="script.js" type="text/javascript"></script>
   </head>
   <body>
