--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Class projects</h2>
     <ol>
       <li>
-        <a href="inspiration/index.html">media consumption tracker</a>
+        <a href="inspiration/index.html">Project 1</a>
       </li>
       <li>
         Project 2 (coming soon!)
